[package]
name = "dictionary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1"
diesel = { version = "1.4", features = ["postgres"] }
dotenv = "0.15"
env_logger = "0.9"
inglix = { path = "../../libs/inglix" }
serde = "1.0"
uuid = { version = "1.1", features = ["serde"] }
