[package]
name = "cranz"
version = "0.1.0"
edition = "2021"
description = "Command-line utility to transpile a text file between Enlish and ingLix, interactively updating a dictionary on the fly with any as-of-yet untranspiled words."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
serde_yaml = "0.9.9"
toml = "0.5.9"
